--- a/content/data/config.json
+++ b/content/data/config.json
@@ -28,5 +28,6 @@
             "url": "/faq",
             "style": "link"
         }
-    ]
+    ],
+    "domain": "https://rainy-daffodil-84af6.netlify.app"
 }
