config.json: changed

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -22,5 +22,5 @@
         }
     ],
     "domain": "https://rainy-daffodil-84af6.netlify.app",
-    "favicon": "images/gobbler-icon copy.svg"
+    "favicon": "images/favicon.svg"
 }
