--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,7 +1,7 @@
 {
     "title": "Massam",
     "path_prefix": "/",
-    "logo_light": "images/favicon.svg",
+    "logo_light": "images/logo.svg",
     "hamburger_background_image": "/images/leaf-light-grey.svg",
     "bg_image_primary_opacity": 60,
     "bg_image_secondary": "/images/leaf-light-grey.svg",
