package.json: changed

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "planty",
-  "description": "Planty",
+  "name": "massam",
+  "description": "Massam Trading",
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
