--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -1,6 +1,5 @@
 stackbitVersion: ~0.3.0
 ssgName: nextjs
-ssgVersion: 9.4.4
 buildCommand: npm run build
 publishDir: out
 staticDir: public
@@ -12,6 +11,8 @@ logicFields:
   - order
   - background_image_opacity
   - bg_image_primary_opacity
+cmsName: git
+nodeVersion: 14
 models:
   config:
     type: data
@@ -97,7 +98,40 @@ models:
     hideContent: true
     file: index.md
     singleInstance: true
-    extends: advanced_page_fields
+    fields:
+      - type: string
+        label: Title
+        name: title
+        description: The title of the page
+        required: true
+      - type: string
+        name: page_css_class
+        label: Page CSS class
+      - type: boolean
+        label: White header
+        name: white_header
+      - type: list
+        name: sections
+        label: Sections
+        description: Page sections
+        items:
+          type: model
+          models:
+            - hero_section
+            - header_section
+            - featured_products_section
+            - featured_categories_section
+            - testimonials_section
+            - promotion_section
+            - store_section
+            - faq_section
+            - bulletpoints_section
+            - contact_section
+      - type: model
+        name: seo
+        models:
+          - stackbit_page_meta
+        label: Seo
   advanced:
     type: page
     label: Advanced Page
@@ -108,7 +142,40 @@ models:
       - index.md
       - category/**
       - products/**
-    extends: advanced_page_fields
+    fields:
+      - type: string
+        label: Title
+        name: title
+        description: The title of the page
+        required: true
+      - type: string
+        name: page_css_class
+        label: Page CSS class
+      - type: boolean
+        label: White header
+        name: white_header
+      - type: list
+        name: sections
+        label: Sections
+        description: Page sections
+        items:
+          type: model
+          models:
+            - hero_section
+            - header_section
+            - featured_products_section
+            - featured_categories_section
+            - testimonials_section
+            - promotion_section
+            - store_section
+            - faq_section
+            - bulletpoints_section
+            - contact_section
+      - type: model
+        name: seo
+        models:
+          - stackbit_page_meta
+        label: Seo
   store:
     type: page
     label: Store
@@ -116,7 +183,40 @@ models:
     file: store.md
     singleInstance: true
     hideContent: true
-    extends: advanced_page_fields
+    fields:
+      - type: string
+        label: Title
+        name: title
+        description: The title of the page
+        required: true
+      - type: string
+        name: page_css_class
+        label: Page CSS class
+      - type: boolean
+        label: White header
+        name: white_header
+      - type: list
+        name: sections
+        label: Sections
+        description: Page sections
+        items:
+          type: model
+          models:
+            - hero_section
+            - header_section
+            - featured_products_section
+            - featured_categories_section
+            - testimonials_section
+            - promotion_section
+            - store_section
+            - faq_section
+            - bulletpoints_section
+            - contact_section
+      - type: model
+        name: seo
+        models:
+          - stackbit_page_meta
+        label: Seo
   advanced_page_fields:
     type: object
     label: Advanced page fields
@@ -153,6 +253,7 @@ models:
         name: seo
         models:
           - stackbit_page_meta
+        label: Seo
   category:
     type: page
     label: Category
@@ -172,6 +273,7 @@ models:
         name: seo
         models:
           - stackbit_page_meta
+        label: Seo
   hero_section:
     type: object
     label: Hero Section
@@ -427,6 +529,7 @@ models:
         name: seo
         models:
           - stackbit_page_meta
+        label: Seo
   action:
     type: object
     label: Action
@@ -495,11 +598,15 @@ models:
             - type: string
               name: name
               default: ''
+              label: Name
             - type: string
               name: value
               default: ''
+              label: Value
             - type: string
               name: keyName
               default: name
+              label: Key Name
             - type: boolean
               name: relativeUrl
+              label: Relative Url
